tests/ui/traits/next-solver/diagnostics/dont-pick-fnptr-bound-as-leaf.next.stderr
error[E0277]: the trait bound `Foo: Trait` is not satisfied
  --> $DIR/dont-pick-fnptr-bound-as-leaf.rs:24:20
   |
LL |     requires_trait(Foo);
   |     -------------- ^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `Trait` is not implemented for `Foo`
  --> $DIR/dont-pick-fnptr-bound-as-leaf.rs:17:1
   |
LL | struct Foo;
   | ^^^^^^^^^^
note: required by a bound in `requires_trait`
  --> $DIR/dont-pick-fnptr-bound-as-leaf.rs:19:22
   |
LL | fn requires_trait<T: Trait>(_: T) {}
   |                      ^^^^^ required by this bound in `requires_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
